@@ -16,7 +16,7 @@ import java.util.stream.Collectors;
 import static egm.io.nifi.processors.ngsild.model.NgsiLdConstants.GENERIC_MEASURE;
 import static org.junit.jupiter.api.Assertions.*;
 
-public class NgsiLdUtilsTests {
+public class TestNgsiLdUtils {
 
     private String loadTestFile(String filename) throws IOException {
         return Files.readString(Paths.get("src/test/resources/" + filename));
@@ -28,7 +28,7 @@ public class NgsiLdUtilsTests {
         List<Entity> entities = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), false);
         assertEquals(2, entities.size());
 
-        List<Attribute> attributes = entities.get(0).entityAttrs;
+        List<Attribute> attributes = entities.getFirst().entityAttrs;
         Map<String, List<Attribute>> attributesByObservedAt = attributes.stream().collect(Collectors.groupingBy(attrs -> attrs.observedAt));
         assertEquals(3, attributesByObservedAt.size());
     }
@@ -51,12 +51,12 @@ public class NgsiLdUtilsTests {
         String data = loadTestFile("entity-temporal.jsonld");
         List<Entity> entities = NgsiLdUtils.parseNgsiLdEntities(new JSONArray(data), true);
         assertEquals(1, entities.size());
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         List<Attribute> attributes = entity.entityAttrs;
 
         assertEquals(13, attributes.size());
         // check all observations have been stored in a generic attribute
-        List<String> attributeNames = attributes.stream().map(Attribute::getAttrName).collect(Collectors.toList());
+        List<String> attributeNames = attributes.stream().map(Attribute::getAttrName).toList();
         assertFalse(attributeNames.contains("faecalcoliform"));
         assertFalse(attributeNames.contains("faecalenterococcus"));
         assertTrue(attributeNames.contains(GENERIC_MEASURE));
@@ -64,10 +64,10 @@ public class NgsiLdUtilsTests {
         List<Attribute> measureAttributes =
             attributes.stream()
                 .filter(attribute -> attribute.getAttrName().equals(GENERIC_MEASURE))
-                .collect(Collectors.toList());
+                .toList();
         // the entity under test has four observations
         assertEquals(4, measureAttributes.size());
-        Attribute measureAttribute = measureAttributes.get(0);
+        Attribute measureAttribute = measureAttributes.getFirst();
         // each observation should have three sub-attributes: parametername, unitcode and datasetId
         assertEquals(3, measureAttribute.subAttrs.size());
         assertTrue(measureAttribute.subAttrs.stream().allMatch(attribute ->
